--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-['java', 'signing', 'maven-publish', 'idea'].each {
+['java', 'signing', 'maven', 'idea'].each {
     apply plugin: it
 }
 
@@ -16,7 +16,6 @@ dependencies {
     compile "p6spy:p6spy:2.0.0"
     compile "org.hibernate:hibernate-core:4.3.11.Final"
     testCompile "org.junit.jupiter:junit-jupiter-api:5.0.0-M3"
-
 }
 
 repositories {
@@ -24,7 +23,7 @@ repositories {
 }
 
 // javadoc.jar generation
-task javadocJar(type: Jar, dependsOn: javadoc) { // (1)
+task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
     from javadoc.destinationDir
 }
@@ -33,112 +32,55 @@ task sourceJar(type: Jar) {
     classifier = 'sources'
     from sourceSets.main.allSource
 }
-// pom file name
-ext {
-    pomFilePath = "${project.projectDir}/tmp/pom.xml"
-    pomFile = file(pomFilePath)
-}
-// add configuration for pom signing
-configurations {
-    pom
-}
+
 // summarize artifacts
 artifacts {
     archives jar
     archives sourceJar
     archives javadocJar
-    if (pomFile.exists()) {
-        pom pomFile
-    }
 }
-// sign all artifacts
-task signJars(type: Sign, dependsOn: [jar, javadocJar, sourceJar]) {
+
+signing {
     sign configurations.archives
 }
-// sign pom
-task signPom(type: Sign) {
-    sign configurations.pom
-}
-// defining which tasks should be called
-if (project.ext.pomFile.exists()) {
-    task preparePublication(dependsOn: [signJars, signPom])
-} else {
-    task preparePublication(dependsOn: signJars)
-}
-// extract signatures and add classifier and extension to them
-def getSignatureFiles = {
-    def allFiles = project.tasks.signJars.signatureFiles.collect { it }
-    def signedSources = allFiles.find { it.name.contains('-sources') }
-    def signedJavadoc = allFiles.find { it.name.contains('-javadoc') }
-    def signedJar = (allFiles - [signedSources, signedJavadoc])[0]
-    return [
-            [archive: signedSources, classifier: 'sources', extension: 'jar.asc'],
-            [archive: signedJavadoc, classifier: 'javadoc', extension: 'jar.asc'],
-            [archive: signedJar, classifier: null, extension: 'jar.asc']
-    ]
-}
-// extract pom signature
-def getPomSignature = {
-    return project.tasks.signPom.signatureFiles.collect { it }[0]
-}
 
-publishing {
-    publications {
-        gpgJars(MavenPublication) {
-            getSignatureFiles().each { signature ->
-                artifact(signature.archive) {
-                    classifier = signature.classifier
-                    extension = signature.extension
-                }
+/* see here for more details http://yennicktrevels.com/blog/2013/10/11/automated-gradle-project-deployment-to-sonatype-oss-repository/ */
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: sonatypeUsername, password: sonatypePassword)
             }
-        }
-        if (project.ext.pomFile.exists()) {
-            gpgPom(MavenPublication) {
-                artifact(getPomSignature()) {
-                    classifier = null
-                    extension = 'pom.asc'
-                }
-            }
-        }
-        jar(MavenPublication) {
-            from components.java
 
-            pom.withXml {
-                asNode().children().last() + {
+            pom.project {
+                resolveStrategy = DELEGATE_FIRST
+                name "${project.group}:${project.name}"
+                description 'Pretty SQL formatter from Hibernate integrated with P6Spy'
+                url 'https://github.com/gbatalski/p6spy-pretty-sql-format'
 
-                    resolveStrategy = Closure.DELEGATE_FIRST
-                    name project.group + ':' + project.name
-                    description 'Pretty SQL formatter from Hibernate integrated with P6Spy'
-                    url 'https://github.com/gbatalski/p6spy-pretty-sql-format'
-
-                    scm {
-                        url 'http://github.com/gbatalski/p6spy-pretty-sql-format/tree/master'
-                        connection 'scm:git:git://github.com/gbatalski/p6spy-pretty-sql-format/.git'
-                        developerConnection 'scm:git:ssh://github.com:gbatalski/p6spy-pretty-sql-format.git'
-                    }
-
-                    licenses {
-                        license {
-                            name 'The Apache Software License, Version 2.0'
-                            url 'http://www.apache.org/license/LICENSE-2.0.txt'
-                            distribution 'repo'
-                        }
-                    }
-
-                    developers {
-                        developer {
-                            id 'gbatalski'
-                            name 'Ghenadii Batalski'
-                            email 'ghenadii.batalski AT gmail.com'
-                        }
-                    }
-                }
-                // add required elements
-                // here writing pom file
-                if (!project.ext.pomFile.exists()) {
-                    writeTo (project.ext.pomFile)
+                scm {
+                    url 'http://github.com/gbatalski/p6spy-pretty-sql-format/tree/master'
+                    connection 'scm:git:git://github.com/gbatalski/p6spy-pretty-sql-format/.git'
+                    developerConnection 'scm:git:ssh://github.com:gbatalski/p6spy-pretty-sql-format.git'
                 }
 
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/license/LICENSE-2.0.txt'
+                        distribution 'repo'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'gbatalski'
+                        name 'Ghenadii Batalski'
+                        email 'ghenadii.batalski AT gmail.com'
+                    }
+                }
             }
         }
     }
