--- a/build.gradle
+++ b/build.gradle
@@ -50,8 +50,8 @@ uploadArchives {
         mavenDeployer {
             beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
-            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: sonatypeUsername, password: sonatypePassword)
+            repository(url: releasesRepositoryUrl) {
+                authentication(userName: repositoryUsername, password: repositoryPassword)
             }
 
             pom.project {
